--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     />
     <meta
       name="keywords"
-      content="coder, programer, software engineer, web development, web developer, full-stack engineer, front-end, full-stack developer, seattle, design, responsive web"
+      content="coder, programmer, software engineer, web development, web developer, full-stack engineer, front-end engineer, full-stack developer, front-end developer, seattle, design, responsive web"
     />
     <meta name="author" content="Chris Carlson | Software Engineer" />
 
     <!-- Title and Favicon -->
-    <title>Chris Carlson - Creator of Things</title>
+    <title>Chris Carlson - Software Engineer</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -92,9 +92,7 @@
               <a class="page-scroll" href="#contact">Contact</a>
             </li>
             <li>
-              <a class="page-scroll" href="/resume.pdf" target="_blank"
-                >Resume</a
-              >
+              <a href="/resume.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
@@ -126,6 +124,8 @@
       class="container-fluid content-section content-section--light text-center content-section--about"
       aria-label="About Chris Carlson"
     >
+      <h2>Who I Am</h2>
+
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <img
@@ -137,14 +137,12 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <p>
-                Hi 👋. I am a Seattle based Software Enginner currently working
-                on
-                <a href="https://azure.microsoft.com/">azure.com</a>. A drummer
-                turned dev, I feel that my musical background helps me bring a
-                unique perspective to every project I tackle. I love
-                collaboration and creating as a team. Technologies I have
-                experience with include .NET, C#, Javascript, React, HTML and
-                CSS.
+                Hi 👋. I am a Seattle based Software Engineer currently working
+                at Microsoft. A drummer turned dev, I feel that my musical
+                background helps me bring a unique and fresh perspective to
+                every project I take on. I love collaboration and creating as a
+                team. Technologies I have experience with include .NET, C#,
+                Javascript, React, HTML and CSS.
               </p>
 
               <p>
@@ -152,22 +150,22 @@
                 outdoors, cooking or gaming.
               </p>
 
-              <p>💻 What am I learning? React Hooks, Redux, Entity Framework</p>
+              <p>
+                💻 What am I learning?
+                <a href="https://www.gatsbyjs.com/">Gatsby JS</a>
+              </p>
 
-              <p>🎮 What am I playing? Immortals Fenyx Rising</p>
+              <p>
+                🎮 What am I playing?
+                <a href="https://www.ghostsonggame.com/">Ghost Song</a>
+              </p>
 
               <p>
                 🎧 What am I listening to?
                 <a
-                  href="https://open.spotify.com/album/61ouYBX1skZYiuv5EHnmEK"
-                  aria-label="Whitney - Candid"
-                  >Whitney - Candid</a
-                >
-                and
-                <a
-                  href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt"
-                  aria-label="Ruston Kelly - Shape & Destroy"
-                  >Ruston Kelly - Shape & Destroy</a
+                  href="https://open.spotify.com/album/6ofEQubaL265rIW6WnCU8y"
+                  aria-label="Radiohead - KID A MNESIA 🤖"
+                  >Radiohead - KID A MNESIA 🤖</a
                 >
               </p>
             </div>
@@ -183,7 +181,50 @@
       aria-label="Coding Work and Projects"
     >
       <div class="container">
-        <h2>Professional</h2>
+        <h2>Experience</h2>
+
+        <!-- Microsoft Azure -->
+        <div class="project-row row">
+          <div class="col-md-5">
+            <a
+              class="card-img"
+              href="https://customers.microsoft.com/"
+              target="_blank"
+            >
+              <img
+                class="img-responsive project-img"
+                src="./img/work/customers-site.png"
+                alt="Microsoft Azure Website"
+              />
+              <div class="details">
+                <span class="text">View site</span>
+              </div>
+            </a>
+          </div>
+
+          <div class="project-content col-md-6">
+            <h3>Microsoft - UHF and Customers Site</h3>
+
+            <p>2022 - Present</p>
+
+            <p>
+              My team recently moved into a new org within Microsoft and have
+              adopted a few new projects including UHF (Universal Header and
+              Footer) and the
+              <a href="https://customers.microsoft.com/">Customers site</a>. We
+              also own the CMS that UHF consumes. UHF is used on thousands of
+              Microsoft websites, including the
+              <a href="https://www.microsoft.com/">Homepage</a> and
+              <a href="https://www.xbox.com/">Xbox site</a>. The current version
+              is in legacy mode, and my team is going to be tasked with building
+              the next gen. This is an exciting opportunity to build a project
+              from the ground up and I am looking forward to working on
+              something that many customers around the world use daily.
+            </p>
+
+            <p>Tech Used: C#, ASP.NET, Javascript, Angular, SCSS</p>
+          </div>
+        </div>
 
         <!-- Microsoft Azure -->
         <div class="project-row row">
@@ -205,38 +246,24 @@
           </div>
 
           <div class="project-content col-md-6">
-            <h3>Azure Marketing Website</h3>
+            <h3>Microsoft - Azure Marketing Website</h3>
 
-            <p>
-              <a
-                class="project-link"
-                href="https://www.azure.microsoft.com/"
-                target="_blank"
-                >Live Site</a
-              >
-            </p>
+            <p>2017 - Present</p>
 
             <p>
               I have been working on the dev team that owns this site since
-              March of 2017. My recent contributions include the development and
-              launch of the
-              <a
-                href="https://azure.microsoft.com/products/azure-stack/hci/catalog/"
-                target="_blank"
-                >Azure Stack HCI Product Catalog</a
-              >
-              as well as other custom features on the site. I am a major
-              contributor to Sundog; our front-end framework and component
-              library that was built in-house. This framework is now used by
-              other teams at Microsoft and I continue to make improvements
-              continuously. In addition, I help maintain a group of smaller
-              sites that we own, like
-              <a href="https://startups.microsoft.com/" target="_blank"
-                >Microsoft for Startups</a
-              >.
+              March of 2017. I started as a vendor through
+              <a href="https://www.roberthalf.com">Robert Half</a> and converted
+              to an FTE in 2020. Throughout my time on the team, I worked on
+              almost all aspects of the site, from accessibility and responsive
+              web design, to new features and functionality. I also made
+              significant contributes to our UI component framework, which the
+              site is built upon. The site is now in maintenance mode as it gets
+              moved to a CMS. My team is only doing partial support for required
+              updates that are needed during the migration.
             </p>
 
-            <p>Tech Used: C#, ASP.NET, JS, React, Razor, Less</p>
+            <p>Tech Used: C#, ASP.NET, Javascript, React, Razor, Less</p>
           </div>
         </div>
 
@@ -260,139 +287,27 @@
           </div>
 
           <div class="project-content col-md-6">
-            <h3>Rational Interaction</h3>
+            <h3>Rational Interaction (now Designit)</h3>
 
-            <p>
-              <a
-                class="project-link"
-                href="https://www.azure.microsoft.com/"
-                target="_blank"
-                >Live Site</a
-              >
-            </p>
+            <p>2016 - 2017</p>
 
             <p>
               I worked as a Junior Web Developer at Rational Interaction from
-              May of 2016 through January of 2017. Rational is a Seattle based
+              May of 2016 through January of 2017. RI was a Seattle based
               marketing agency focused on creating impactful business solutions
               for various clients. During my time there, I worked on web apps
               for Acer Computers, The Seattle Seahawks and Microsoft. My
-              responsibilities involved adding new UI features to these projects
-              as well integrating new tech into our stack.
+              responsibilities involved adding new UI features to these
+              projects, integrating new tech into our stack and participating in
+              code reviews and bug fixes. Rational Interaction has since been
+              acquired by
+              <a href="https://www.designit.com/studios/seattle">Designit</a>.
             </p>
 
             <p>
-              Tech Used: JS, HTML, CSS, Node/Express, Vue, Less/Sass, Handlebars
+              Tech Used: Javascript, HTML, CSS, Node/Express, Vue, Less/Sass,
+              Handlebars.js
             </p>
-          </div>
-        </div>
-
-        <h2>Personal Projects</h2>
-
-        <!-- React OMDB Movie Search App -->
-        <div class="project-row row">
-          <div class="col-md-5">
-            <a
-              class="card-img"
-              href="https://react-omdb-movie-search.herokuapp.com/"
-              target="_blank"
-            >
-              <img
-                class="img-responsive project-img"
-                src="./img/work/omdb.JPG"
-                alt="React Movie Search App"
-              />
-              <div class="details">
-                <span class="text">View site</span>
-              </div>
-            </a>
-          </div>
-          <div class="project-content col-md-6">
-            <h3>React Movie Search App</h3>
-
-            <p>
-              <a
-                class="project-link"
-                href="https://github.com/TheCodingCarlson/react-omdb-app"
-                target="_blank"
-                >Code</a
-              >
-              |
-              <a
-                class="project-link"
-                href="https://react-omdb-movie-search.herokuapp.com/"
-                target="_blank"
-                >Demo</a
-              >
-            </p>
-
-            <p>
-              I created a few adaptations of this app during my time at
-              <a href="https://generalassemb.ly/">General Assembly Seattle</a>
-              and recently decided to create a React version using Babel,
-              Webpack, and some new features of ES2017. It's a simple app that
-              allows users to search the OMDB movie database using keywords.
-              Each successful query returns up to 10 results. Users can then
-              click on a result card to see more information on a particular
-              film.
-            </p>
-
-            <p>
-              Tech Used: React, Babel, Webpack, Materialize, Node/Express, OMDB
-              API
-            </p>
-          </div>
-        </div>
-
-        <!-- Pokemon ES6 App -->
-        <div class="project-row row">
-          <div class="col-md-5">
-            <a
-              class="card-img"
-              href="https://pokemon-es6-app.herokuapp.com/"
-              target="_blank"
-            >
-              <img
-                class="img-responsive project-img"
-                src="./img/work/pokemon.png"
-                alt="ES6 Pokemon App"
-              />
-              <div class="details">
-                <span class="text">View site</span>
-              </div>
-            </a>
-          </div>
-          <div class="project-content col-md-6">
-            <h3>ES6 Pokemon App</h3>
-
-            <p>
-              <a
-                class="project-link"
-                href="https://github.com/TheCodingCarlson/pokemon_es6_app"
-                target="_blank"
-                >Code</a
-              >
-              |
-              <a
-                class="project-link"
-                href="https://pokemon-es6-app.herokuapp.com/"
-                target="_blank"
-                >Demo</a
-              >
-            </p>
-
-            <p>
-              A simple pokemon app that utilizes new technologies including ES6,
-              Flexbox and new CSS3 features. Search for info on a specific
-              Pokemon or build an effective team against certain types of
-              Pokemon. Made using the
-              <a class="project-links" href="https://pokeapi.co/">Pokemon API</a
-              >. Features used include: arrow functions, const/let, promises
-              (asynchronous API calls), spread operator, fetch, CSS variables,
-              and fetch.
-            </p>
-
-            <p>Tech Used: HTML, CSS, JS, Handlebars, Node/Express</p>
           </div>
         </div>
       </div>
@@ -406,7 +321,7 @@
     >
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>Contact</h2>
+          <h2>Contact Me</h2>
           <ul class="list-inline banner-social-buttons">
             <li>
               <a
